@@ -4183,7 +4183,11 @@ name|NFS3ERR_IO
 argument_list|,
 name|postOpAttr
 argument_list|,
-literal|null
+operator|new
+name|byte
+index|[
+literal|0
+index|]
 argument_list|)
 return|;
 block|}
